# test_cmake

./: CMakeLists.txt  azure-pipelines.yml
example/: CMakeLists.txt  main.cpp
include/: CMakeLists.txt
include/simplecmake/: printhello.h
src/: CMakeLists.txt  printhello.cpp
